<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">间隔闹钟</string>
    <string name="add_layout_name">新增闹钟</string>
    <string name="edit_layout_name">编辑闹钟</string>
    <string name="setting_layout_name">设置</string>

    <string name="never">从不</string>
    <string name="everyday">每天</string>
    <string name="default_label">闹钟</string>

    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="interval_enabled">间隔</string>
    <string name="interval">间隔时间</string>
    <string name="days_of_week">重复</string>
    <string name="alert">铃声</string>
    <string name="vibrate">振动</string>
    <string name="alarm_name">闹钟名</string>

    <string name="delete_alarm">删除闹钟</string>
    <string name="delete_alarm_confirm">将会删除该闹钟！</string>

    <string-array name="alarm_set">
        <item>"将在不到 1 分钟后响铃"</item>
        <item>"将在<xliff:g id="DAYS">%1$s</xliff:g>后响铃"</item>
        <item>"将在<xliff:g id="HOURS">%2$s</xliff:g>后响铃"</item>
        <item>"将在<xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g>后响铃"</item>
        <item>"将在<xliff:g id="MINUTES">%3$s</xliff:g>后响铃"</item>
        <item>"将在<xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后响铃"</item>
        <item>"将在<xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后响铃"</item>
        <item>"将在<xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后响铃"</item>
    </string-array>
    <string name="day">"1 天"</string>
    <string name="days">"<xliff:g id="DAYS">%s</xliff:g> 天"</string>
    <string name="hour">"1 小时"</string>
    <string name="hours">"<xliff:g id="HOURS">%s</xliff:g> 小时"</string>
    <string name="minute">"1 分钟"</string>
    <string name="minutes">"<xliff:g id="MINUTES">%s</xliff:g> 分钟"</string>

    <string name="silent_alert_title">静音模式闹钟响铃</string>
    <string name="silent_alert_summary">手机处于静音模式时，闹钟仍会响铃</string>
    <string name="alert_duration">响铃时长</string>
    <string-array name="alert_duration_entries">
        <item>1 分钟</item>
        <item>5 分钟</item>
        <item>10 分钟</item>
        <item>15 分钟</item>
        <item>20 分钟</item>
        <item>30 分钟</item>
    </string-array>
    <string-array name="alert_duration_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
    </string-array>
    <string name="snooze_duration">再响设置</string>
    <string-array name="snooze_duration_entries">
        <item>5 分钟</item>
        <item>10 分钟</item>
        <item>15 分钟</item>
        <item>20 分钟</item>
        <item>25 分钟</item>
        <item>30 分钟</item>
    </string-array>
    <string-array name="snooze_duration_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string name="volume_button">音量按钮</string>
    <string name="volume_button_summary">设置音量键在响铃时的作用</string>
    <string-array name="volume_button_entries">
        <item>无</item>
        <item>静音</item>
        <item>暂停</item>
        <item>关闭</item>
    </string-array>

    <string name="btn_snooze">"点击小睡<xliff:g id="MINUTES">%s</xliff:g>分钟"</string>
    <string name="slide_to_unlock_string">滑动关闭闹钟</string>

    <string name="alarm_notify_text">"选择暂停或关闭此闹钟。"</string>
    <string name="alarm_alert_silenced">"闹钟响铃时间为 <xliff:g id="MINUTES">%d</xliff:g> 分钟"</string>

    <string name="alarm_notify_snooze_label">"<xliff:g id="LABEL">%s</xliff:g>（已暂停）"</string>
    <string name="alarm_notify_snooze_text">"已将闹钟设置为从现在起 <xliff:g id="TIME">%s</xliff:g>后再提醒。选中可以取消。"</string>
    <string name="alarm_alert_snooze_set">"暂停 <xliff:g id="MINUTES">%d</xliff:g> 分钟。"</string>
</resources>
