<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/add_layout_name">
    <Preference
        android:key="start_time"
        android:summary="8:00"
        android:title="@string/start_time"
        />
    <SwitchPreference
        android:defaultValue="false"
        android:key="interval_enable"
        android:title="@string/interval_enabled"
        />
    <Preference
        android:dependency="interval_enable"
        android:key="end_time"
        android:summary="18:00"
        android:title="@string/end_time"
        />
    <EditTextPreference
        android:defaultValue="180"
        android:dependency="interval_enable"
        android:inputType="number"
        android:key="interval"
        android:summary="180 minutes"
        android:title="@string/interval"
        />
    <MultiSelectListPreference
        android:entries="@array/week_days"
        android:entryValues="@array/week_days"
        android:key="days_of_week"
        android:title="@string/days_of_week"/>

    <RingtonePreference
        android:key="ringtone"
        android:ringtoneType="alarm"
        android:showDefault="true"
        android:showSilent="true"
        android:summary="Check a ringtone"
        android:title="@string/alert"/>

    <SwitchPreference
        android:key="vibrate"
        android:title="@string/vibrate"/>

    <EditTextPreference
        android:defaultValue="Alarm"
        android:key="name"
        android:summary="Alarm"
        android:title="@string/alarm_name"/>

</PreferenceScreen>